--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -27,16 +27,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="곡 제목을 입력해 주세요"
+            android:completionThreshold="2"
             android:layout_marginLeft="30dp"
             android:ems="10"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
-            android:id="@+id/replayButton"
+            android:id="@+id/playButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다시듣기"
+            android:text="듣기"
             android:layout_marginLeft="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
