--- a/app/src/main/res/layout/result_info.xml
+++ b/app/src/main/res/layout/result_info.xml
@@ -14,32 +14,22 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/correctAnswer"
-        android:layout_width="130dp"
-        android:layout_height="0dp"
-        android:scrollbars="vertical"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/gray"
         app:layout_constraintTop_toBottomOf="@id/resultTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/userAnswer"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/userAnswer"
-        android:layout_width="130dp"
+        android:id="@+id/recyvle_result"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
+        android:padding="20dp"
         app:layout_constraintTop_toBottomOf="@id/resultTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/isCorrect"
-        android:layout_width="130dp"
-        android:layout_height="0dp"
-        android:scrollbars="vertical"
-        app:layout_constraintLeft_toRightOf="@id/userAnswer"
-        app:layout_constraintTop_toBottomOf="@id/resultTitle"
-        app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
         android:id="@+id/returnButton"
