--- a/app/src/main/res/layout/recyclerview_result.xml
+++ b/app/src/main/res/layout/recyclerview_result.xml
@@ -14,7 +14,7 @@
 
             <TextView
                 android:id="@+id/correct"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="진짜 정답"
                 android:textSize="20sp"
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/userAnswer"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="사용자 정답"
                 android:textSize="20sp"
@@ -30,11 +30,10 @@
 
             <TextView
                 android:id="@+id/oorx"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="ox"
                 android:textSize="20sp"
-                android:layout_gravity="right"
                 android:layout_weight="1"/>
         </LinearLayout>
 
