--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,18 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/loadSong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/playgame"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="30dp"
+        android:src="@drawable/load"
+        android:backgroundTint="@color/gray"
+        android:onClick="LoadMusic"/>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/playgame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
