--- a/app/src/main/res/layout/recyclerview_result.xml
+++ b/app/src/main/res/layout/recyclerview_result.xml
@@ -14,17 +14,19 @@
 
             <TextView
                 android:id="@+id/correct"
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="진짜 정답"
                 android:textSize="20sp"
+                android:ems="3"
                 android:layout_weight="3"/>
 
             <TextView
                 android:id="@+id/userAnswer"
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="사용자 정답"
+                android:ems="3"
                 android:textSize="20sp"
                 android:layout_weight="3"/>
 
