완성 - api를 사용해서 불러오기로 수정할 예정

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -39,6 +39,8 @@
             android:layout_height="wrap_content"
             android:text="듣기"
             android:layout_marginLeft="20dp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_round"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/answerTv"/>
