--- a/app/src/main/res/layout/recyclerview_result.xml
+++ b/app/src/main/res/layout/recyclerview_result.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/recyclerview_round">
 
         <LinearLayout
             android:id="@+id/resultcontainer"
@@ -17,8 +18,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="진짜 정답"
-                android:textSize="20sp"
-                android:ems="3"
+                android:textSize="15sp"
+                android:ems="2"
                 android:layout_weight="3"/>
 
             <TextView
@@ -26,8 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="사용자 정답"
-                android:ems="3"
-                android:textSize="20sp"
+                android:ems="2"
+                android:textSize="15sp"
                 android:layout_weight="3"/>
 
             <TextView
@@ -38,13 +39,6 @@
                 android:textSize="20sp"
                 android:layout_weight="1"/>
         </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
