--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/music_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toTopOf="@+id/music_player"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +34,7 @@
             android:layout_marginRight="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:backgroundTint="@color/half"
             android:onClick="onClick"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -58,6 +60,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:progressTint="@color/red"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/music_title"
                 app:layout_constraintRight_toRightOf="parent"
@@ -74,9 +77,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/playgame"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/load"
-        android:backgroundTint="@color/gray"
+        android:tint="@color/white"
+        android:backgroundTint="@color/half"
         android:onClick="LoadMusic"/>
 
 
@@ -88,7 +93,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="30dp"
         android:src="@drawable/gameplayer"
-        android:backgroundTint="@color/gray"
+        android:tint="@color/white"
+        android:backgroundTint="@color/half"
         android:onClick="Dialog"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
