--- a/app/src/main/res/layout/recyclerview_music.xml
+++ b/app/src/main/res/layout/recyclerview_music.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:background="@drawable/recyclerview_round"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/music_logo"
@@ -21,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="textView"
-            android:textSize="20dp" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 
