--- a/app/src/main/res/layout/result_score.xml
+++ b/app/src/main/res/layout/result_score.xml
@@ -40,6 +40,9 @@
         android:layout_height="wrap_content"
         android:text="상세보기"
         android:layout_marginBottom="30dp"
+        android:layout_marginRight="10dp"
+        android:textColor="@color/white"
+        android:background="@drawable/button_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/returnButton"/>
 
@@ -48,6 +51,8 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="돌아가기"
+        android:textColor="@color/white"
+        android:background="@drawable/button_round"
         android:layout_margin="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
