--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B81C0F</color>
-    <color name="colorPrimaryDark">#8F0A00</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#F44336</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="gray">#E4E4E4</color>
-    <color name="red">#D50000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#7C7C7C</color>
+    <color name="red">#F3C1C1</color>
+    <color name="half">#FF7171</color>
 </resources>
