검색구현하기전

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#7C7C7C</color>
     <color name="red">#F3C1C1</color>
     <color name="half">#FF7171</color>
+    <color name="background">#34000000</color>
 </resources>
