--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <TextView
+        android:id="@id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="목록"
+        android:layout_margin="5dp"
+        android:textColor="@color/half"
+        android:textSize="42sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/music_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
         android:layout_margin="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintBottom_toTopOf="@+id/music_player"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/music_player"
@@ -79,10 +90,10 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/load"
+        android:src="@drawable/search"
         android:tint="@color/white"
         android:backgroundTint="@color/half"
-        android:onClick="LoadMusic"/>
+        android:onClick="SearchMusic"/>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
